--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "nodemon server/index.js",
-    "client": "cd client && npm start",
+    "server": "cd server && PORT=5001 nodemon index.js",
+    "client": "cd client && PORT=3001 npm start",
     "build": "cd client && npm run build",
     "install-all": "npm install && cd client && npm install"
   },
